test/errhandling/errorMessages/throwNew.good
throwNew.chpl:2: In function 'f':
throwNew.chpl:3: error: Cannot throw a type: 'borrowed Error'. Did you forget the keyword 'new'?
